--- a/portfolio-remastered/src/components/NavBar/NavBar.css
+++ b/portfolio-remastered/src/components/NavBar/NavBar.css
@@ -21,3 +21,36 @@
     font-size: 1.2rem;
     font-weight: 500;
 }
+
+.hamburger-menu{
+    display: none;
+}
+
+@media screen and (max-width: 1040px) {
+    .nav-menu{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100vh;
+        background: #39A9DB;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -3;
+
+    }
+
+    .nav-menu li{
+        padding: 1rem 0;
+    }
+
+    .nav-menu li a{
+        font-size: 2rem;
+    }
+
+    .hamburger-menu{
+        display: initial;
+    }
+    
+}
