Putting the functionaity on the hamburger menu for mobile view specifically

--- a/portfolio-remastered/src/components/NavBar/NavBar.css
+++ b/portfolio-remastered/src/components/NavBar/NavBar.css
@@ -36,9 +36,13 @@
         background: #39A9DB;
         position: absolute;
         top: 0;
-        left: 0;
+        left: -100%;
         z-index: -3;
 
+    }
+
+    .nav-menu.active{
+        left: 0;
     }
 
     .nav-menu li{
