Trying different colors on Navbar

--- a/portfolio-remastered/src/index.css
+++ b/portfolio-remastered/src/index.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    background-color: #39A9DB;
+    background-color: #1CCAD8;
 }
 
 h1, h4, p, a{
@@ -23,7 +23,7 @@ ul{
     padding: 12px 32px;
     font-size: 1rem;
     text-transform: uppercase;
-    background-color: #1C77C3;
+    background-color: #1CCAD8;
     color: black;
     border: 1px solid white;
     font-weight: 600;
