--- a/portfolio-remastered/src/components/NavBar/NavBar.css
+++ b/portfolio-remastered/src/components/NavBar/NavBar.css
@@ -33,7 +33,7 @@
         align-items: center;
         width: 100%;
         height: 100vh;
-        background: #39A9DB;
+        background: #40BCD8;
         position: absolute;
         top: 0;
         left: -100%;
