Changing navbar colors again

--- a/portfolio-remastered/src/index.css
+++ b/portfolio-remastered/src/index.css
@@ -7,11 +7,11 @@
 }
 
 body{
-    background-color: #40BCD8;
+    background-color: black;
 }
 
 h1, h4, p, a{
-    color: #D63230;
+    color: #FF006E;
     text-decoration: none;
 }
 
