--- a/portfolio-remastered/src/components/NavBar/NavBar.css
+++ b/portfolio-remastered/src/components/NavBar/NavBar.css
@@ -33,12 +33,12 @@
         align-items: center;
         width: 100%;
         height: 100vh;
-        background: #40BCD8;
+        background: black;
         position: absolute;
         top: 0;
         left: -100%;
         z-index: -3;
-
+        transition: 0.3s;
     }
 
     .nav-menu.active{
