--- a/portfolio-remastered/src/index.css
+++ b/portfolio-remastered/src/index.css
@@ -19,24 +19,30 @@ ul{
   list-style-type: none;  
 }
 
-.btn{
+.button {
     padding: 12px 32px;
     font-size: 1rem;
     text-transform: uppercase;
-    background-color: #1CCAD8;
-    color: black;
-    border: 1px solid white;
+    background: #3A86FF;
+    color: #222;
+    border: 1px solid #fff;
     font-weight: 600;
     cursor: pointer;
-}
-
-.btn-light {
-    background: transparent;
-    color: white;
-}
-
-.btn:hover {
+  }
+  
+  .button-light {
+    padding: 12px 32px;
+    font-size: 1rem;
+    text-transform: uppercase;
+    background: #8338EC;
+    color: #222;
+    border: 1px solid #fff;
+    font-weight: 600;
+    cursor: pointer;
+  }
+  
+  .button:hover {
     background: rgba(255, 255, 255, 0.2);
-    color: white;
+    color: #fff;
     transition: 0.3s;
-}
+  }
