Adding in button hover for contact button

--- a/portfolio-remastered/src/index.css
+++ b/portfolio-remastered/src/index.css
@@ -46,3 +46,9 @@ ul{
     color: #fff;
     transition: 0.3s;
   }
+
+  .button-light:hover{
+    background: rgba(255, 255, 255, 0.2);
+    color: #fff;
+    transition: 0.3s;
+  }
