--- a/portfolio-remastered/src/components/HeroImg.css
+++ b/portfolio-remastered/src/components/HeroImg.css
@@ -50,3 +50,13 @@ object-fit: cover;
 .content .button{
     margin: 1rem 0.5rem;
 }
+
+@media screen and (max-width:640px){
+    .hero .content h1{
+        font-size: 3rem;
+    }
+    
+    .hero .content p{
+        font-size: 1.4rem;
+    }
+}
