Changing color on one of the button text and adding in social icons with styling

--- a/portfolio-remastered/src/index.css
+++ b/portfolio-remastered/src/index.css
@@ -35,7 +35,7 @@ ul{
     font-size: 1rem;
     text-transform: uppercase;
     background: #8338EC;
-    color: #222;
+    color: black;
     border: 1px solid #fff;
     font-weight: 600;
     cursor: pointer;
