--- a/portfolio-remastered/src/index.css
+++ b/portfolio-remastered/src/index.css
@@ -11,7 +11,7 @@ body{
 }
 
 h1, h4, p, a{
-    color: #FF006E;
+    color: #FFBE0B;
     text-decoration: none;
 }
 
@@ -24,7 +24,7 @@ ul{
     font-size: 1rem;
     text-transform: uppercase;
     background: #3A86FF;
-    color: #222;
+    color: #FFBE0B;
     border: 1px solid #fff;
     font-weight: 600;
     cursor: pointer;
@@ -35,7 +35,7 @@ ul{
     font-size: 1rem;
     text-transform: uppercase;
     background: #8338EC;
-    color: black;
+    color: FFBE0B;
     border: 1px solid #fff;
     font-weight: 600;
     cursor: pointer;
