--- a/portfolio-remastered/src/components/HeroImg2.css
+++ b/portfolio-remastered/src/components/HeroImg2.css
@@ -1,20 +1,44 @@
-.hero-img{
+.mask{
     width: 100%;
-    background-color: black;
-    height: 60vh;
+    height: 100vh;
     position: relative;
-}
-
-.heading{
-    width: 100%;
+    }
+    
+    .intro-img{
+    width: 100%; 
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.hero-img::before{
-    content: empty;
-    background: "../assets/Projects.jpg";
-}
+    background-size: cover;
+    background-position: center;
+    object-fit: cover;
+    }
+    
+    .mask::after{
+        content: "";
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: black;
+        opacity: 0.8;
+    }
+    
+    .hero .content{
+        position: absolute;
+        transform: translate(-50%, -50%);
+        top: 50%;
+        left: 50%;
+        text-align: center;
+    }
+    
+    .hero .content h1{
+        font-size: 4rem;
+        padding: 0.6rem 0 1.5rem;
+    }
+    
+    .hero .content p{
+        font-size: 1.4rem;
+        font-weight: 200;
+        text-transform: uppercase;
+        margin-bottom: 3rem;
+    }
