--- a/portfolio-remastered/src/components/HeroImg.css
+++ b/portfolio-remastered/src/components/HeroImg.css
@@ -37,35 +37,31 @@
   }
   
   .hero .content h1 {
-    font-size: 4rem;
+    font-size: 3rem;
     padding: 0.6rem 0 1.5rem;
   }
   
   .hero .content p {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     font-weight: 200;
     text-transform: uppercase;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
   }
   
   .content .button {
-    margin: 0.5rem 0.5rem;
-  }
-  
-  .profile-picture {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-bottom: 1rem;
+    margin: 3rem 0.5rem;
   }
   
   @media screen and (max-width: 640px) {
     .hero .content h1 {
-      font-size: 3rem;
+      font-size: 2rem;
     }
   
     .hero .content p {
-      font-size: 1.4rem;
+      font-size: 1rem;
+    }
+
+    .content .button {
+      margin: 3rem 0.5rem;
     }
   }  
