--- a/portfolio-remastered/src/components/HeroImg2.css
+++ b/portfolio-remastered/src/components/HeroImg2.css
@@ -1,10 +1,10 @@
-.hero-img{
+.hero-img2{
     width: 100%;
     height: 60vh;
     position: relative;
 }
 
-.hero-img::before{
+.hero-img2::before{
     content: "";
     background: url(../assets/Projects.jpg);
     background-size: cover;
@@ -15,7 +15,7 @@
     top: 0;
     left: 0;
     z-index: -1;
-    opacity: 0.4;
+    opacity: 0.3;
 }    
 
 .heading{
@@ -27,17 +27,17 @@
     align-items: center;
 }
 
-.hero-img h1{
+.hero-img2 h1{
     font-size: 2.4rem;
 }
 
-.hero-img p{
+.hero-img2 p{
     font-size: 1.4rem;
     text-align: center;
 }
 
 @media screen and (max-width: 640px){
-    .hero-img h1{
+    .hero-img2 h1{
         font-size: 2rem;
     }
 }
