--- a/portfolio-remastered/src/components/HeroImg3.css
+++ b/portfolio-remastered/src/components/HeroImg3.css
@@ -1,52 +1,43 @@
-.mask{
+.hero-img3{
     width: 100%;
-    height: 100vh;
+    height: 60vh;
     position: relative;
-    }
-    
-    .intro-img{
-    width: 100%; 
-    height: 100%;
-    background-size: cover;
-    background-position: center;
-    object-fit: cover;
-    z-index: -1;
-    }
-    
-    .mask::after{
-        content: "";
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        background-color: black;
-        opacity: 0.8;
-    }
-    
-    .hero .content{
-        position: absolute;
-        transform: translate(-50%, -50%);
-        top: 50%;
-        left: 50%;
-        text-align: center;
-    }
-    
-    .hero .content h1{
-        font-size: 2.4rem;
-        padding: 0.6rem 0 1.5rem;
-    }
-    
-    .hero .content p{
-        font-size: 1.4rem;
-        text-align: center;
-        font-weight: 200;
-        text-transform: uppercase;
-        margin-bottom: 3rem;
-    }
+}
 
-    @media screen and (max-width: 640px){
-        .hero .content h1{
-            font-size: 2rem;
-        }
+.hero-img3::before{
+    content: "";
+    background: url(../assets/Contact.jpg);
+    background-size: cover;
+    background-position: center top;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    opacity: 0.3;
+}    
+
+.heading{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero-img3 h1{
+    font-size: 2.4rem;
+}
+
+.hero-img3 p{
+    font-size: 1.4rem;
+    text-align: center;
+}
+
+@media screen and (max-width: 640px){
+    .hero-img3 h1{
+        font-size: 2rem;
     }
+}
