--- a/portfolio-remastered/src/components/WorkCard.css
+++ b/portfolio-remastered/src/components/WorkCard.css
@@ -1,6 +1,6 @@
 .project-heading{
     text-align: center;
-    padding: 4rem 0 2rem;
+    padding: 4rem 0 2rem 0;
 }
 
 .project-container{
@@ -9,4 +9,43 @@
     display: grid;
     grid-template-columns: repeat (3,1fr);
     grid-gap: 40px;
+    padding-bottom: 5rem;
+}
+
+.project-card{
+    background: black;
+    padding: 1.2rem 1rem;
+}
+
+.project-card img{
+    width: 100%;
+}
+
+.project-title{
+    color: #FF006E;
+    padding: 1rem 0;
+}
+
+.proj-details{
+    padding-bottom: 1rem;
+    font-size: 1.1rem;
+    text-align: justify;
+}
+
+.proj-buttons{
+    display: flex;
+    justify-content: space-between;
+    padding: 0.5rem 0;
+}
+
+.proj-buttons .buttons{
+    padding: 0.5rem 1rem;
+}    
+
+@media screen and (max-width: 740px){
+    .project-container{
+        max-width: 90%;
+        margin: auto;
+        grid-template-columns: 1fr;
+    }
 }
