--- a/portfolio-remastered/src/components/ExtraProjs.css
+++ b/portfolio-remastered/src/components/ExtraProjs.css
@@ -45,9 +45,9 @@ background-color: #141414;
     padding: 1rem ;
 }
 
-.button{
+.card .button{
     display: block;
-    width: 80%;
+    max-width: 80%;
     margin: 2rem auto;
 }
 
