--- a/portfolio-remastered/src/components/WorkCard.css
+++ b/portfolio-remastered/src/components/WorkCard.css
@@ -24,6 +24,7 @@
 .project-title{
     color: #FF006E;
     padding: 1rem 0;
+    text-align: center;
 }
 
 .proj-details{
@@ -39,7 +40,7 @@
 }
 
 .proj-buttons .button{
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 1.9rem;
 }    
 
 @media screen and (max-width: 740px){
