Trying to get resume related information added to the page

--- a/portfolio-remastered/src/components/WorkCard.css
+++ b/portfolio-remastered/src/components/WorkCard.css
@@ -7,14 +7,18 @@
     max-width: 1140px;
     margin: auto;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 40px;
 }
 
-.project-card{
+.project-card {
     background: black;
     padding: 1.2rem 1rem;
-}
+    height: 100%; /* Ensure that all cards have the same height */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }  
 
 .project-card img{
     width: 100%;
@@ -34,12 +38,13 @@
 
 .proj-buttons{
     display: flex;
-    justify-content: space-between;
+    justify-content: center; /* Center the buttons horizontally */
+    gap: 10px; /* Adjust the gap between the buttons as needed */
     padding: 0.5rem 0;
 }
 
 .proj-buttons .button{
-    padding: 0.5rem 1.9rem;
+    padding: 0.5rem 2rem;
 }    
 
 @media screen and (max-width: 740px){
@@ -48,4 +53,7 @@
         margin: auto;
         grid-template-columns: 1fr;
     }
+    .proj-buttons .button{
+        padding: 0.5rem 4.8rem;
+    }   
 }
