--- a/portfolio-remastered/src/components/HeroImg4.css
+++ b/portfolio-remastered/src/components/HeroImg4.css
@@ -36,6 +36,18 @@
     text-align: center;
 }
 
+.button-container {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 30px;
+  }
+  
+  .button-container button {
+    font-size: 1.2rem;
+    padding: 10px 20px;
+    color: #FFBE0B;
+  }
+
 @media screen and (max-width: 640px){
     .hero-img4 h1{
         font-size: 2rem;
