--- a/portfolio-remastered/src/components/Form.css
+++ b/portfolio-remastered/src/components/Form.css
@@ -1,32 +1,30 @@
-label {
+label{
     color: #FF006E;
-    margin-bottom: 0.5rem;
-  }
-  
-  form {
+    margin-bottom: 0.5;
+}
+
+form{
     display: flex;
     flex-direction: column;
     padding: 4rem 1rem;
     margin: auto;
     max-width: 600px;
-  }
-  
-  form input,
-  form textarea {
+}
+
+form input, form textarea{
     margin-bottom: 1rem;
-    padding: 10px 18px;
+    padding: 10p 18px;
     font-size: 1.2rem;
     background-color: rgba(255, 255, 255, 0.1);
     border-color: white;
     color: white;
-  }
-  
-  button {
+}
+
+button{
     background-color: #FF006E;
     margin-bottom: 4rem;
-  }
-  
-  .submit {
-    color: #FFBE0B;
-  }
-  
+}
+
+.submit{
+    color:#FFBE0B
+}
