--- a/src/components/Contact/style.css
+++ b/src/components/Contact/style.css
@@ -6,7 +6,7 @@
 
 .hero-img3::before{
     content: "";
-    background: url(../assets/Contact.jpg);
+    background: url(../../assets/Contact.jpg);
     background-size: cover;
     background-position: center top;
     height: 100%;
