--- a/src/components/ProjectsPage/style.css
+++ b/src/components/ProjectsPage/style.css
@@ -6,7 +6,7 @@
 
 .hero-img2::before{
     content: "";
-    background: url(../assets/Projects.jpg);
+    background: url(../../assets/Projects.jpg);
     background-size: cover;
     background-position: center top;
     height: 100%;
