--- a/src/components/Resume/style.css
+++ b/src/components/Resume/style.css
@@ -6,7 +6,7 @@
 
 .hero-img4::before{
     content: "";
-    background: url(../assets/Resume.jpg);
+    background: url(../../assets/Resume.jpg);
     background-size: cover;
     background-position: center top;
     height: 100%;
