--- a/src/components/ProjectCards/WorkCard.css
+++ b/src/components/ProjectCards/WorkCard.css
@@ -52,8 +52,11 @@
         max-width: 90%;
         margin: auto;
         grid-template-columns: 1fr;
+    } 
+}
+
+@media screen and (max-width: 500px){
+    .project-card{
+        max-width: 90vw; 
     }
-    .proj-buttons .button{
-        padding: 0.5rem 4.8rem;
-    }   
 }
