Update mobile NavBar to close when a link is clicked

--- a/src/components/HomePage/style.css
+++ b/src/components/HomePage/style.css
@@ -97,3 +97,9 @@
       font-size: 0.6rem;
     }
   }  
+
+  @media screen and (max-height: 600px) {
+    .hero .content {
+      margin-top: 20px;
+    } 
+  }  
